--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,8 +37,13 @@ jobs:
         with:
           node-version: 22
           cache: pnpm
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9.11.0
+          run_install: false
       - name: Enable Corepack
-        run: corepack enable
+        run: corepack enable || true
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Install dependencies
